AX: AXValue/AXMenuItemMarkChar not defined for menuitemradio (should be false (0) with aria-checked=mixed | undefined) https://bugs.webkit.org/show_bug.cgi?id=120372

Reviewed by Mario Sanchez Prada.

Source/WebCore:

Add new roles to make the distinction between menu item, menu item radio and menu item checkbox.
Expose AXValue for menu items, so that they can convey the, on/off/mixed state of aria-checked.

Test: platform/mac/accessibility/menu-item-values.html

* accessibility/AccessibilityNodeObject.cpp:
(WebCore::AccessibilityNodeObject::isMenuRelated):
(WebCore::AccessibilityNodeObject::isMenuItem):
(WebCore::AccessibilityNodeObject::isChecked):
(WebCore::AccessibilityNodeObject::actionElement):
(WebCore::AccessibilityNodeObject::visibleText):
(WebCore::AccessibilityNodeObject::title):
* accessibility/AccessibilityObject.cpp:
(WebCore::createARIARoleMap):
(WebCore::AccessibilityObject::checkboxOrRadioValue):
* accessibility/AccessibilityObject.h:
* accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::computeAccessibilityIsIgnored):
* accessibility/ios/WebAccessibilityObjectWrapperIOS.mm:
(-[WebAccessibilityObjectWrapper accessibilityCanFuzzyHitTest]):
(-[WebAccessibilityObjectWrapper accessibilityTraits]):
* accessibility/mac/WebAccessibilityObjectWrapperMac.mm:
(-[WebAccessibilityObjectWrapper accessibilityAttributeNames]):
(createAccessibilityRoleMap):
(-[WebAccessibilityObjectWrapper accessibilityAttributeValue:]):

LayoutTests:

* platform/mac/accessibility/menu-item-values-expected.txt: Added.
* platform/mac/accessibility/menu-item-values.html: Added.



Canonical link: https://commits.webkit.org/139055@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@155492 268f45cc-cd09-0410-ab3c-d52691b4dbfc